Refactor CandidateValidator and StreamPractice classes - simplified the condition checking within the test method of the CandidateValidator class by splitting it into two parts - created a new private method "checkTimeLivingInCountry" - optimized the code in the StreamPractice class.